--- a/azure-pipelines-myappdocker-vm-acr.yml
+++ b/azure-pipelines-myappdocker-vm-acr.yml
@@ -6,7 +6,7 @@ trigger:
 variables:
   VM_IP_PUBLICA: '40.70.44.102'  # Se debe colocar la IP pública de tu máquina virtual
   IMAGE_NAME: 'myapp-nginx-s4'  # Se debe colocar el Nombre de la imagen que será descargada desde ACR
-  ACR_NAME: 'DevOpsApp'  # Se debe colocar el Nombre de tu Azure Container Registry (ACR)
+  ACR_NAME: 'devopsapp'  # Se debe colocar el Nombre de tu Azure Container Registry (ACR)
   ACR_USERNAME: 'DevOpsApp'  # Se debe colocar el Nombre de usuario del ACR
   ACR_PASSWORD: 'CQFThQfCZcGzuxQL0iNih26DqdKIwLTPCb2EiGkOA5+ACRCEuk9e'  # Se debe colocar la Contraseña del ACR
 
