--- a/azure-pipeline-push-image-acr.yml
+++ b/azure-pipeline-push-image-acr.yml
@@ -5,9 +5,9 @@ trigger:
 
 variables:
   # Variables de entorno
-  ACR_NAME: 'DevOpsApp' # Colocar el nombre de tu ACR
-  IMAGE_NAME: 'myapp-nginx-s4' # Colocar el Nombre de Imagen
-  SERVICE_CONNECTION_NAME: 'myapps-devops-s4' # Colocar nombre del Service Connection ubicado en Docker Registry-- Azure Container Registry
+  ACR_NAME: 'DevOpsAppSumativa' # Colocar el nombre de tu ACR
+  IMAGE_NAME: 'myapp-nginx' # Colocar el Nombre de Imagen
+  SERVICE_CONNECTION_NAME: 'myapps-devops-sumativa' # Colocar nombre del Service Connection ubicado en Docker Registry-- Azure Container Registry
 
 jobs:
   - job: BuildAndPush
