--- a/azure-pipelines-myappdocker-vm-acr.yml
+++ b/azure-pipelines-myappdocker-vm-acr.yml
@@ -16,7 +16,7 @@ stages:
       - deployment: DeployToVM
         displayName: 'Deploy to VM'
         environment:
-          name: 'VM-DEVOPS-S4'  # Nombre del entorno configurado en Azure DevOps
+          name: 'VM-DEVOPS-SUMATIVA'  # Nombre del entorno configurado en Azure DevOps
           resourceType: VirtualMachine  # Especifica que se conecta a una máquina virtual
         strategy:
           runOnce:
